fix(Button):Icon alignment.

--- a/src/button/style/index.less
+++ b/src/button/style/index.less
@@ -65,9 +65,6 @@
         margin-left: 5px;
         vertical-align: middle;
     }
-    i[class^="w-icon"] {
-        vertical-align: middle;
-    }
     &.w-transition-base.disabled:after,
     &.w-transition-base[disabled]:after{
         display: none;
